--- a/front/src/components-lib/monsterInfos/MonsterInfos.scss
+++ b/front/src/components-lib/monsterInfos/MonsterInfos.scss
@@ -145,6 +145,12 @@
 	            	2px -2px 3px black,
 	            	-2px -2px 3px black,
 	            	-2px 2px 3px black;
+	            @media screen and (max-width: $screen-xs){
+					font-size: 13px; 
+				}
+	            @media screen and (min-width: $screen-xs) and (max-width: $screen-md){
+					font-size: 13px; 
+				}
 				@media screen and (min-width: $screen-md) and (max-width: $screen-lg){
 					font-size: 14px; 
 				}
@@ -160,6 +166,12 @@
 	            	-2px -2px 3px black,
 	            	-2px 2px 3px black;
 				span { color: green; }
+				@media screen and (max-width: $screen-xs){
+					font-size: 13px; 
+				}
+	            @media screen and (min-width: $screen-xs) and (max-width: $screen-md){
+					font-size: 13px; 
+				}
 				@media screen and (min-width: $screen-md) and (max-width: $screen-lg){
 					font-size: 14px; 
 				}
